--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ padding: 0;}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,16 +57,18 @@ padding: 0;}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="https://www.youtube.com/channel/UC06-LJXzUAguB7a_xxHqf3Q">My Youtube Channel</a></li>
+                            <li><a class="dropdown-item" href="https://www.instagram.com/hm_yt_creator/">My insta</a></li>
+                            <li><a class="dropdown-item" href="https://www.facebook.com/HM_YT_Creator-103740255613973">My Facebook Page</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link disabled">Disabled</a>
-                    </li>
+                    </li> -->
                 </ul>
-                <form class="d-flex" role="search">
+                <!-- <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                </form> -->
             </div>
         </div>
     </nav>
