--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                     extension made for edistrict website, througt this extension you can access
                     the links easily.<br>this extension will make your browser work just like internet explorer to
                     download the
-                    extension zip file click on the image below<br>👇</i></b></p>
+                    extension zip file click on the Click Here button below<br>👇</i></b></p>
         <p align="center" style="font-weight: bolder; font-size: x-large;"><b><i>यह Extension एक साधारण Chrome Extension
                     हैं, जो की Edistrict website के लिेए बानाया गया हैं। इसकी सहायता से आप सभी links को खोल सकेगे।<br>इस
                     Extension की सहायता से आपका Browser बिलकुल Internet Explorer की तरहॉ काम करेगा। Extension को डाउनलोड
-                    करने के लिेए नीचे दिए गए चित्र पर क्लिक करे।<br>👇</i></b></p>
+                    करने के लिेए नीचे दिए गए Click Here के बटन पर क्लिक करे।<br>👇</i></b></p>
         <center><a href="Extension2.zip"download><img
                 src="https://media0.giphy.com/media/zoV50Q2odDgESoIFHy/giphy.gif?cid=6c09b952szf1pcp3n7vk772rm46morqu6cs65ko3qayqbnmk&ep=v1_stickers_related&rid=giphy.gif&ct=s"
                 alt="CLICK HERE यहॉ क्लिक करे" width="200px"></a></center>
