--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
+                    </li> -->
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li> -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown
+                            More Links
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item"
-                                    href="https://www.youtube.com/channel/UC06-LJXzUAguB7a_xxHqf3Q">My Youtube
+                                    href="http://www.youtube.com/@techwithlinux9360">My Youtube
                                     Channel</a></li>
-                            <li><a class="dropdown-item" href="https://www.instagram.com/hm_yt_creator/">My insta</a>
+                            <li><a class="dropdown-item" href="https://www.instagram.com/hm_yt_creator/">My instagram</a>
                             </li>
                             <li><a class="dropdown-item"
                                     href="https://www.facebook.com/HM_YT_Creator-103740255613973">My Facebook Page</a>
@@ -102,10 +102,12 @@
                     हैं, जो की Edistrict website के लिेए बानाया गया हैं। इसकी सहायता से आप सभी links को खोल सकेगे।<br>इस
                     Extension की सहायता से आपका Browser बिलकुल Internet Explorer की तरहॉ काम करेगा। Extension को डाउनलोड
                     करने के लिेए नीचे दिए गए Click Here के बटन पर क्लिक करे।<br>👇</i></b></p>
-        <center><a href="Extension2.zip"download><img
+        <center><a href="Edistrict_extension.zip"download><img
                 src="https://media0.giphy.com/media/zoV50Q2odDgESoIFHy/giphy.gif?cid=6c09b952szf1pcp3n7vk772rm46morqu6cs65ko3qayqbnmk&ep=v1_stickers_related&rid=giphy.gif&ct=s"
                 alt="CLICK HERE यहॉ क्लिक करे" width="200px"></a></center>
     </div>
+    <br>
+    <br>
     <br>
     <br>
     <div class="preview" align="center">
