--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     <br>
     <div class="preview" align="center">
         <h1><i>Preview of the file</i></h1>
-        <iframe src="https://drive.google.com/file/d/19NgmmqTdrcv1-Hp9hbgM0k5ZXfrCBPWW/preview" width="80%" height="480px" allow="autoplay"></iframe>
+        <!-- <iframe src="https://drive.google.com/file/d/19NgmmqTdrcv1-Hp9hbgM0k5ZXfrCBPWW/preview" width="80%" height="480px" allow="autoplay"></iframe> -->
+        <iframe src="https://drive.google.com/file/d/1VSM_6obS1SqPlwXozAgrg14buAza__lX/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
 
 
