--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <li><a class="dropdown-item"
                                     href="https://www.facebook.com/HM_YT_Creator-103740255613973">My Facebook Page</a>
                             </li>
-<li><a href="https://github.com/HM245">My GitHub Page</a>
+<li><a href="https://github.com/HM245">My GitHub Page</a></li>
                         </ul>
                     </li>
                     <!-- <li class="nav-item">
