--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                         <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             More Links
-                        </a>-->
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
                             <li><a class="dropdown-item"
                                     href="http://www.youtube.com/@techwithlinux9360">My Youtube
                                     Channel</a></li>
