--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
                         <a class="nav-link" href="#">Link</a>
                     </li> -->
                     <li class="nav-item dropdown">
-                        <!--<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             More Links
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">-->
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item"
                                     href="http://www.youtube.com/@techwithlinux9360">My Youtube
-                                    Channel</a></li>
-                            <li><a class="dropdown-item" href="https://www.instagram.com/hm_yt_creator/">My instagram</a>
+                                    Channel <img src="images/Screenshot from 2023-12-13 12-46-04.png" width="30px" alt=""></a></li>
+                            <li><a class="dropdown-item" href="https://www.instagram.com/hm_yt_creator/">My instagram <img src="images/Screenshot from 2023-12-13 12-47-27.png" width="30px" alt=""></a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="https://www.facebook.com/HM_YT_Creator-103740255613973">My Facebook Page</a>
+                                    href="https://www.facebook.com/HM_YT_Creator-103740255613973">My Facebook Page <img src="images/Screenshot from 2023-12-13 12-51-14.png" width="30px" alt=""></a>
                             </li>
-<li><a class="dropdown-item" href="https://github.com/HM245">My GitHub Page</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/HM245">My GitHub Page <img src="images/Screenshot from 2023-12-13 12-49-22.png" width="30px" alt=""></a></li>
                         </ul>
                     </li>
                     <!-- <li class="nav-item">
@@ -104,8 +104,8 @@
                     Extension की सहायता से आपका Browser बिलकुल Internet Explorer की तरहॉ काम करेगा। Extension को डाउनलोड
                     करने के लिेए नीचे दिए गए Click Here के बटन पर क्लिक करे।<br>👇</i></b></p>
         <center><a href="Edistrict_extension.zip"download><img
-                src="https://media0.giphy.com/media/zoV50Q2odDgESoIFHy/giphy.gif?cid=6c09b952szf1pcp3n7vk772rm46morqu6cs65ko3qayqbnmk&ep=v1_stickers_related&rid=giphy.gif&ct=s"
-                alt="CLICK HERE यहॉ क्लिक करे" width="200px"></a></center>
+                src="images/giphy.gif"
+                alt="CLICK HERE यहॉ क्लिक करे" width="350px"></a></center>
     </div>
     <br>
     <br>
