--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
                 <h1 class="display-4">समय: <span id="time"></span></h1>
-                <p class="lead">यहाँ पर हम आपको समय से अवगत कराएगे |</p>
+                <p class="lead">यहाँ पर हम आपको समय से अवगत कराएगे।</p>
             </div>
         </div>
     </div>
