--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item"
-                                    href="http://www.youtube.com/@techwithlinux9360">My Youtube
+                                    href="http://www.youtube.com/@techwithlinux9360" target="_blank">My Youtube
                                     Channel <img src="images/Screenshot from 2023-12-13 12-46-04.png" width="30px" alt=""></a></li>
-                            <li><a class="dropdown-item" href="https://www.instagram.com/hm_yt_creator/">My instagram <img src="images/Screenshot from 2023-12-13 12-47-27.png" width="30px" alt=""></a>
+                            <li><a class="dropdown-item" href="https://www.instagram.com/hm_yt_creator/" target="_blank">My instagram <img src="images/Screenshot from 2023-12-13 12-47-27.png" width="30px" alt=""></a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="https://www.facebook.com/HM_YT_Creator-103740255613973">My Facebook Page <img src="images/Screenshot from 2023-12-13 12-51-14.png" width="30px" alt=""></a>
+                                    href="https://www.facebook.com/HM_YT_Creator-103740255613973" target="_blank">My Facebook Page <img src="images/Screenshot from 2023-12-13 12-51-14.png" width="30px" alt=""></a>
                             </li>
-                            <li><a class="dropdown-item" href="https://github.com/HM245">My GitHub Page <img src="images/Screenshot from 2023-12-13 12-49-22.png" width="30px" alt=""></a></li>
+                            <li><a class="dropdown-item" href="https://github.com/HM245" target="_blank">My GitHub Page <img src="images/Screenshot from 2023-12-13 12-49-22.png" width="30px" alt=""></a></li>
                         </ul>
                     </li>
                     <!-- <li class="nav-item">
